--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       Remove all code in `styles.css`!
     -->
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <script type="module" src="fun.js"></script>
+    <!-- <script type="module" src="script.js"></script> -->
   </head>
   <body>
     <main>
