--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css" />
     <!-- <script type="module" src="fun.js"></script> -->
     <script type="module" src="script.js"></script>
+    <script type="module" src="protoChaining.js"></script>
   </head>
   <body>
     <main>
