feat: changes of the instance

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     -->
     <link rel="stylesheet" href="styles.css" />
     <!-- <script type="module" src="fun.js"></script> -->
-    <script type="module" src="script.js"></script>
-    <script type="module" src="protoChaining.js"></script>
+    <!-- <script type="module" src="script.js"></script> -->
+    <!-- <script type="module" src="protoChaining.js"></script> -->
+    <script type="module" src="nwclass.js"></script>
   </head>
   <body>
     <main>
