--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- <script type="module" src="fun.js"></script> -->
     <!-- <script type="module" src="script.js"></script> -->
     <!-- <script type="module" src="protoChaining.js"></script> -->
-    <script type="module" src="nwclass.js"></script>
+    <!-- <script type="module" src="nwclass.js"></script> -->
+    <script type="module" src="callapplybind.js"></script>
   </head>
   <body>
     <main>
